# aivmt

./: .env.example  .gitignore  HYPOTHESIS.md  README.md  check_science.sh  conftest.py  pyproject.toml  启动病历录入.command  启动评分.command  开始采集.command  开始问诊.command
conf/: config.yaml
configs/: seed.yaml
data/: asr_confusion_zh.json  eval_transcripts.FROZEN.json
docs/: FACULTY_SCORING.md  HARDWARE.md  SERVER.md  USAGE.md
firmware/: ARCHITECTURE.md  FLASH_AND_QA.md  G0_BUILD_REPORT.md  GOAL.md  INTEGRATION.md  README.md  demo_encounter_device.json  sdkconfig.defaults.aivmt  sdkconfig.defaults.flashed
firmware/components/aivmt_sp/: CMakeLists.txt  Kconfig  sp_participant.cc  sp_persona.cc  sp_ptt.cc  sp_session.cc  sp_telemetry.cc
firmware/components/aivmt_sp/include/: sp_config.h  sp_participant.h  sp_persona.h  sp_ptt.h  sp_session.h  sp_state.h  sp_telemetry.h
harness/: __init__.py  evidence_table.py  registry.py  run_all.py
paper/: README.md  methods.md  results.md
plan/: PROJECT_PLAN.md  STORY_LOCK.md  TRIPOD-LLM-checklist.md  firmware-spec.md  preregistration-v0.1.md  protocol-v0.1.md  教师评分操作手册.md
results/: evidence_table.md  rehearsal_good_scored.json
scripts/: asr_robustness.py  build_eval_set.py  build_scoring_packet.py  check_evalset_frozen.py  ingest_real_encounters.py  local_vs_cloud.py  preflight_check.py  quant_frontier.py  real_score_demo.py  rehearse_encounter.py  robustness.py  score_eval_set.py  score_real_encounters.py  sq1_pilot.py  summarize_questionnaire.py  validity_real_students.py
tests/: test_asr_noise.py  test_benchmark.py  (+25 more)
(+233 files in other folders)
