[project]
name = "aivmt"
version = "0.0.1"
description = "AI Virtual Medical Teacher — embodied voice standardized-patient with validated automated competency scoring"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
serve = ["openai>=1.30"]   # OpenAI-compatible client for local vLLM/Ollama endpoints
voice = ["faster-whisper>=1.0", "sounddevice>=0.4"]  # local bilingual ASR + mic capture
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aivmt"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
